force-app/main/default/objects/Finance_Transaction__c/Finance_Transaction__c.object-meta.xml
<CustomObject>
    <label>Transacción</label>
    <nameField>
        <displayFormat>TRANS-{0000}</displayFormat>
        <label>Número de Transacción</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transacciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>