force-app/main/default/objects/Finance_Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoría</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salario</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
            <value>
                <fullName>Inversiones</fullName>
            </value>
            <value>
                <fullName>Transferencia Recibida</fullName>
            </value>
            <value>
                <fullName>Premio / Reembolso</fullName>
            </value>
            <value>
                <fullName>Otros Ingresos</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Ropa y Calzado</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Viajes</fullName>
            </value>
            <value>
                <fullName>Suscripciones</fullName>
            </value>
            <value>
                <fullName>Deudas / Préstamos</fullName>
            </value>
            <value>
                <fullName>Otros Gastos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>