force-app/main/default/objects/Finance_Transaction__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>TEXT(YEAR(Date__c)) &amp; &quot;-&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Date__c)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes/Año</label>
    <type>Text</type>
</CustomField>