force-app/main/default/objects/Finance_Transaction__c/fields/Signed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Signed_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Gasto&apos;), Amount__c * -1, Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto con Signo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>