force-app/main/default/objects/Finance_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingreso</fullName>
            </value>
            <value>
                <fullName>Gasto</fullName>
                <default>true</default>
                <label>Gasto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>