force-app/main/default/objects/Finance_Transaction__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>El monto de una transacción debe ser mayor a cero.</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>El monto debe ser mayor a cero.</errorMessage>
</ValidationRule>