force-app/main/default/objects/Finance_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>