force-app/main/default/objects/Finance_Transaction__c/listViews/Gastos.listView-meta.xml
<ListView>
    <fullName>Gastos</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Gasto</value>
    </filters>
    <label>Gastos</label>
</ListView>