force-app/main/default/objects/Finance_Transaction__c/listViews/Ingresos.listView-meta.xml
<ListView>
    <fullName>Ingresos</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Ingreso</value>
    </filters>
    <label>Ingresos</label>
</ListView>